--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".StatusActivity" >
+        </activity>
+        <activity android:name=".DefinitionActivity" >
+        </activity>
     </application>
 
 </manifest>
