--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,22 +12,13 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".StatusActivity" >
-        </activity>
-        <activity android:name=".DefinitionActivity" >
-        </activity>
-        <activity
-            android:name=".CalenderActivity"
-            android:label="@string/title_activity_calender"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".ListViewActivity"
-            android:label=""
-            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".StatusActivity"/>
+        <activity android:name=".DefinitionActivity"/>
+        <activity  android:name=".CalenderActivity"/>
+        <activity android:name=".ListViewActivity"/>
     </application>
 
 </manifest>
