--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mypuredays.mypuredays" >
+    package="com.mypuredays.mypuredays">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,8 +20,8 @@
         <activity android:name=".DefinitionActivity" />
         <activity android:name=".CalenderActivity" />
         <activity android:name=".ListViewActivity" />
-        <activity android:name=".DialogCalendar" >
-        </activity>
+        <activity android:name=".DialogCalendar"></activity>
+        <activity android:name=".dialogOnot"></activity>
     </application>
 
 </manifest>
